NEWS for the Gmisc package

Changes for 0.5.8.1
--------------------
* Bugfixes for printC&A and getDesc.
* Added a pvalueFormatter

Changes for 0.5.8.0
--------------------
* Added to forestplot2 ability create customly drawn confidence intervals/boxes
* Generated diamond, circle and point custom draw functions for forestplot2
* Added forestplot2 compatibility for the summary
* Minor bugfixes behind the scenes
* Fixed issue with getCrudeAndAdjustedModelData mixing up rows for rms objects

Changes for 0.5.7.11
-------------------
* Added tfoot option to the htmlTable function
* Switched to the proper caption-align for htmlTable
* Added options for htmlTable() where you now can format the table counter text and change to Arabic numerals.
* Bug: changed just to align for printCrudeAndAdjustedModel()

Changes for 0.5.7.10
-------------------
* Switched the order in the multi-line forestplot for the legend

Changes for 0.5.7.9
-------------------
* Bugfix for getTics so that it can handle small spans < .5

Changes for 0.5.7.8
-------------------
* Bugfix for forestplot2 with headers

Changes for 0.5.7.7
-------------------
* Added title for forestplot2
* Fixed the margins for forestplot2

Changes for 0.5.7.6
-------------------
* Added more legend border and fill options to the forestplot2
* Added the legend.title option in the forestplot2
* Fixed the auto-sizing of the area for the forestplot2
* Rows/elements with NA are now not included in the zero-line as they are considered to be headers

Changes for 0.5.7.5
-------------------
* Added more legend options to the forestplot2
* Minor changes to simleRmsAnova

Changes for 0.5.7.4
-------------------
* Added some debugging info for the getDescriptionStatsBy with more detailed errors when unit/total columns don't match

Changes for 0.5.7.4
-------------------
* Externalized many of the forestplot2 functions and added the option of having a set line height
* Added new_page option for grid-based plots