@@ -1,6 +1,6 @@
 Package: Gmisc
-Version: 0.5.8.0
-Date: 2014-01-21
+Version: 0.5.8.1
+Date: 2014-01-23
 Title: A few handy functions of mine
 Author: Max Gordon <max@gforge.se>
 Maintainer: Max Gordon <max@gforge.se>
