@@ -177,7 +177,7 @@ printCrudeAndAdjustedModel(fit, file="", add_references = TRUE,
 
 # Use some labels to prettify the output
 # fro the mtcars dataset
-data(mtcars)
+data("mtcars")
 
 label(mtcars$mpg) <- "Gas"
 units(mtcars$mpg) <- "Miles/(US) gallon"
@@ -197,9 +197,13 @@ label(mtcars$col) <- "Car color"
 
 require(splines)
 fit_mtcar <- lm(mpg ~ wt + gear + col, data=mtcars)
-printCrudeAndAdjustedModel(fit_mtcar, file="", add_references=TRUE, ctable=TRUE, desc_column = TRUE)
+printCrudeAndAdjustedModel(fit_mtcar, file="", 
+                           add_references=TRUE, ctable=TRUE, 
+                           desc_column = TRUE)
 
-printCrudeAndAdjustedModel(fit_mtcar)
+printCrudeAndAdjustedModel(fit_mtcar, add_references=TRUE,desc_column=TRUE,
+                           order=c("Interc", "wt"))
+
 # Alterntive print - just an example, doesn't make sense to skip reference
 printCrudeAndAdjustedModel(fit_mtcar, 
                            file="", 
